# devtools-course-practice

code/: build-and-test.sh
code/Bykadorov-Roman/: CMakeLists.txt  CTestTests.txt
code/Bykadorov-Roman/application/: converter.cpp
code/Bykadorov-Roman/include/: currencyconverter.h  currencyconverter_application.h
code/Bykadorov-Roman/src/: currencyconverter.cxx  currencyconverter_application.cxx
code/Bykadorov-Roman/test/: test_currency_converter.cpp  test_currency_converter_application.cpp
code/Maximov-Maxim/: CMakeLists.txt
code/Maximov-Maxim/include/: alghuffman.h
code/Maximov-Maxim/src/: alghuffman.cxx
code/Maximov-Maxim/test/: test_huffman_algorithm.cpp  test_main.cpp  test_node.cpp
code/Rozanov-Anatoliy/: CMakeLists.txt  CTestTests.txt
code/Rozanov-Anatoliy/application/: search.cpp
code/Rozanov-Anatoliy/include/: interpolationsearch.h  interpolationsearch_application.h
code/Rozanov-Anatoliy/src/: interpolationsearch.cxx  interpolationsearch_application.cxx
code/Rozanov-Anatoliy/test/: test_interpolation_search_application.cpp
code/kokoshnikov-alexey/: CMakeLists.txt  CTestTests.txt
code/kokoshnikov-alexey/application/: calc.cpp
code/kokoshnikov-alexey/include/: simplecalculator_application.h
code/kokoshnikov-alexey/src/: simplecalculator_application.cxx
code/kokoshnikov-alexey/test/: test_simplecalculator_application.cpp
code/kruchinin-dmitry/: CMakeLists.txt  CTestTests.txt
code/kruchinin-dmitry/application/: stack.cpp
code/kruchinin-dmitry/include/: node.h  stack.h  stack_application.h
code/kruchinin-dmitry/src/: stack_application.cxx
code/kruchinin-dmitry/test/: test_stack.cpp  test_stack_application.cpp
code/shochin-alexandr/: CMakeLists.txt  CTestTests.txt
code/shochin-alexandr/application/: main.cpp
code/shochin-alexandr/include/: tconvApp.h
code/shochin-alexandr/src/: tconv.cxx  tconvApp.cxx
code/shochin-alexandr/test/: test_tconvApp.cpp
code/sirotin-nikita/: CMakeLists.txt  CTestTests.txt  README.md
code/sirotin-nikita/application/: app-volume.cpp
code/sirotin-nikita/include/: app-volume.h  volumefigures.h
code/sirotin-nikita/src/: app-volumefigures.cxx
code/sirotin-nikita/test/: test_app.cpp
code/vinogradov-vlad/: CMakeLists.txt  CTestTests.txt  README.md
code/vinogradov-vlad/application/: findmin.cpp
code/vinogradov-vlad/include/: leftistheap_application.h
code/vinogradov-vlad/src/: leftistheap_application.cxx
code/vinogradov-vlad/test/: test_leftist_heap_application.cpp
